--- a/model-development/Capstone_TF_No_Corpus.ipynb
+++ b/model-development/Capstone_TF_No_Corpus.ipynb
@@ -20,7 +20,71 @@
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "import csv\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download indonesian stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ada', 'adalah', 'adanya', 'adapun', 'agak', 'agaknya', 'agar', 'akan', 'akankah', 'akhir', 'akhiri', 'akhirnya', 'aku', 'akulah', 'amat', 'amatlah', 'anda', 'andalah', 'antar', 'antara']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\thori\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')\n",
+    "stopwords_indonesia = stopwords.words('indonesian')\n",
+    "\n",
+    "# Tampilkan beberapa contoh stopwords bahasa Indonesia\n",
+    "print(stopwords_indonesia[:20])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Removing Stop words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_stopwords(sentence):\n",
+    "    \n",
+    "    # Sentence converted to lowercase-only\n",
+    "    sentence = sentence.lower()\n",
+    "\n",
+    "    words = sentence.split()\n",
+    "    no_words = [w for w in words if w not in stopwords_indonesia]\n",
+    "    sentence = \" \".join(no_words)\n",
+    "\n",
+    "    return sentence"
    ]
   },
   {
@@ -44,7 +108,7 @@
     "        reader = csv.reader(file, delimiter=\",\")\n",
     "        next(reader)\n",
     "        for row in reader:\n",
-    "            sentences.append(row[0])\n",
+    "            sentences.append(remove_stopwords(row[0]) if stopwords_remove == True else row[0])\n",
     "            labels.append(int(row[1]))\n",
     "\n",
     "    return sentences, labels"
@@ -285,18 +349,40 @@
     }
    ],
    "source": [
-    "model = tf.keras.Sequential([\n",
-    "        tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),\n",
-    "        tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64,return_sequences=True)),\n",
-    "        tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),\n",
-    "        tf.keras.layers.Flatten(),\n",
-    "        tf.keras.layers.Dense(128, activation='relu'),\n",
-    "        tf.keras.layers.Dropout(0.2),\n",
-    "        tf.keras.layers.Dense(64, activation='relu'),\n",
-    "        tf.keras.layers.Dropout(0.3),\n",
-    "        tf.keras.layers.Dense(5, activation='softmax')\n",
-    "    ])\n",
+    "# model = tf.keras.Sequential([\n",
+    "#         # tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),\n",
+    "#         # tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64,return_sequences=True)),\n",
+    "#         # tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),\n",
+    "#         # tf.keras.layers.Flatten(),\n",
+    "#         # tf.keras.layers.Dense(128, activation='relu'),\n",
+    "#         # # tf.keras.layers.Dropout(0.2),\n",
+    "#         # tf.keras.layers.Dense(64, activation='relu'),\n",
+    "#         # #tf.keras.layers.Dropout(0.3),\n",
+    "#         # tf.keras.layers.Dense(5, activation='softmax')\n",
+    "#     ])\n",
     "\n",
+    "# model = tf.keras.Sequential([\n",
+    "#         tf.keras.layers.Embedding(vocab_size, embedding_dim),\n",
+    "#         tf.keras.layers.Dropout(0.2),\n",
+    "#         tf.keras.layers.GlobalAveragePooling1D(),\n",
+    "#         tf.keras.layers.Dropout(0.2),\n",
+    "#         tf.keras.layers.Dense(5, activation='softmax')\n",
+    "# ])\n",
+    "\n",
+    "# model = tf.keras.Sequential([\n",
+    "#     tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),\n",
+    "#     tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),\n",
+    "#     tf.keras.layers.Dense(24, activation=\"relu\"),\n",
+    "#     tf.keras.layers.Dense(5, activation=\"softmax\")\n",
+    "# ])\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),\n",
+    "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(4)),\n",
+    "    tf.keras.layers.Dropout(0.5),\n",
+    "    tf.keras.layers.Dense(8, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(5, activation=\"softmax\")\n",
+    "])\n",
     "model.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(), optimizer='adam',metrics=['accuracy'])\n",
     "model.summary()"
    ]
