Update model bert for prediction

--- a/model-development/Capstone_Bert.ipynb
+++ b/model-development/Capstone_Bert.ipynb
@@ -816,6 +816,152 @@
       "source": [
         "model.save(\"Model_Mihu_970709.h5\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o2qX2k6MlKoK",
+        "outputId": "34017697-43ae-4917-8f39-d93ad25dafdd"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2075504"
+            ]
+          },
+          "execution_count": 41,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import pathlib\n",
+        "\n",
+        "file_name = \"saved_model_970709_mihu\"\n",
+        "\n",
+        "# Convert the model.\n",
+        "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
+        "converter.target_spec.supported_ops = [tf.lite.OpsSet.TFLITE_BUILTINS, tf.lite.OpsSet.SELECT_TF_OPS]\n",
+        "tflite_model = converter.convert()\n",
+        "\n",
+        "tflite_model_file = pathlib.Path('Model_Mihu_970709.tflite')\n",
+        "tflite_model_file.write_bytes(tflite_model)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "RM9Gu0XD_qWp",
+        "outputId": "7e30976b-c256-405b-b618-db651525b860"
+      },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'/content/saved_model_9713_mihu.zip'"
+            ]
+          },
+          "execution_count": 29,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import shutil\n",
+        "\n",
+        "# Specify the directory to be zipped\n",
+        "folder_to_zip = file_name  # Replace this with the path to your folder\n",
+        "\n",
+        "# Specify the zip file name\n",
+        "zip_file_name = file_name + '.zip'\n",
+        "\n",
+        "# Create a zip file\n",
+        "shutil.make_archive(zip_file_name[:-4], 'zip', folder_to_zip)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4jrGqQRy2TJA",
+        "outputId": "e7c7caf1-712c-4bcd-c135-24e0a3aedeb9"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[   3 3444 1507 2955 3245 7312    1    0    0    0    0    0    0    0\n",
+            "     0    0    0    0    0    0    0    0    0    0    0]]\n",
+            "1/1 [==============================] - 1s 904ms/step\n",
+            "[[1.0685743e-02 9.8929089e-01 9.7499685e-07 2.2440972e-05 8.4349088e-09]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "masukan = \"benarkan televisi saya rusak\"\n",
+        "\n",
+        "input_data = [tokenizer(masukan)['input_ids']]\n",
+        "\n",
+        "input_data = pad_sequences(input_data, padding=padding, maxlen=max_length, truncating=truncate)\n",
+        "\n",
+        "print(input_data)\n",
+        "# Prediksi\n",
+        "prediction = model.predict(input_data)\n",
+        "print(prediction)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0zhLHQHqC0ot",
+        "outputId": "54132403-543d-4cbc-d4a3-f2b7f82350b3"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[  3 145 118  32   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
+            "    0   0   0   0   0   0   0]]\n",
+            "1/1 [==============================] - 0s 41ms/step\n",
+            "[[2.4141239e-06 3.7336578e-03 9.8077744e-01 2.7821903e-04 1.5208232e-02]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "#masukan = [\"air mengalir pada di dinding rumah saya\"]\n",
+        "\n",
+        "#masukan[0] = remove_stopwords(masukan[0])\n",
+        "\n",
+        "#input_data = tokenizer.texts_to_sequences(masukan)\n",
+        "#input_data = pad_sequences(input_data, padding=padding, maxlen=max_length, truncating=truncate)\n",
+        "\n",
+        "#print(input_data)\n",
+        "# Prediksi\n",
+        "#prediction = model.predict(input_data)\n",
+        "#print(prediction)"
+      ]
     }
   ],
   "metadata": {
